--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,39 @@
+# Node dependencies
 node_modules/
+**/node_modules/
+
+# Build outputs
+build/
+dist/
+.tmp/
+.cache/
+
+# Vite/React caches
+**/.vite/
+**/.eslintcache
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment files
 .env
+.env.*
+!*.example
+
+# Uploads (runtime artifacts)
+server/uploads/
+
+# Coverage
+coverage/
+
+# OS-specific
 .DS_Store
+Thumbs.db
+
+# Editor/IDE
+.vscode/
+.idea/
+*.swp
