--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@ pnpm-debug.log*
 !*.example
 
 # Uploads (runtime artifacts)
-server/uploads/
+server/uploads/*
+!server/uploads/.gitkeep
 
 # Coverage
 coverage/
